# StrucIn

./: .gitignore  .pre-commit-hooks.yaml  .strucin.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  example-usage.yml  publish.yml
examples/: REPORT.md  analysis.json  dependency_graph.json  repo_index.json
src/strucin/: __init__.py  _version.py  exceptions.py
src/strucin/cli/: __init__.py  hooks.py  main.py  ui.py
src/strucin/core/: __init__.py  analysis_cache.py  analyzer.py  artifacts.py  config.py  diff.py  explainer.py  import_resolver.py  indexer.py  lifecycle.py  metrics.py  models.py  reporter.py  semantic.py
src/strucin/utils/: __init__.py  logging.py
src/strucin/web/: __init__.py  dashboard.py
src/strucin/web/assets/: app.js  index.html  styles.css
tests/: conftest.py  test_analysis_cache.py  test_analyze.py  test_cli_help.py  test_cli_ui.py  test_config.py  test_diff.py  test_explain.py  test_import_resolver.py  test_init.py  test_integration_llm.py  test_logging.py  test_metrics.py  test_observability.py  test_phase6_regression.py  test_phase8_scalability.py  test_phase9_regression.py  test_public_api.py  test_report.py  test_scan.py  test_semantic.py  test_web.py
tests/fixtures/configured_repo/: .strucin.toml
tests/fixtures/cycle_repo/: README.md
tests/fixtures/cycle_repo/pkg/: a.py  b.py
tests/fixtures/golden/: explain_cycle_repo.md  report_cycle_repo.md
